--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -29,6 +29,10 @@
                             {% endfor %}
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a href="{{url_for('cart')}}" class="nav-link">Cart ({{ session['shopping_cart']|length }})
+                        </a>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
