--- a/shop/templates/products/details_page.html
+++ b/shop/templates/products/details_page.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6" id="b_image">
-            <img src="{{url_for('static',filename='images/' + product.image_1)}}" alt="{{product.name}}" width="400" height="400" />
+            <img src="{{url_for('static',filename='images/' + product.image_1)}}" alt="{{product.name}}" width="400" height="400" style="object-fit: contain;"/>
         </div>
         <div class="col-md-6">
             <h4>Product name: {{product.name}}</h4>
@@ -13,19 +13,25 @@
             <p>Product price: ${{product.price}}</p>
             <hr />
             {% if product.discount > 0 %}
-            <p>Discount: {{product.discount}} %</p>
-            <hr />
+                <p>Discount: {{product.discount}} %</p>
+                <hr />
             {% endif %}
             <b>Product description</b>
             <p>{{product.desc}}</p>
+            <form action="{{url_for('add_to_cart')}}" method="post">
+                <input type="hidden" name="product_id" value="{{product.id}}">
+                <label for="quantity">Quantity: </label>
+                <input type="number" name="quantity" value="1" min="1" max="{{product.stock}}">
+                <button type="submit" class="btn btn-sm btn-warning">Add to Cart</button>
+            </form>
         </div>
     </div>
     <hr />
     <div class="row">
         <div class="col-md-12" id="s_image">
-            <img src="{{url_for('static',filename='images/'+ product.image_1)}}" alt="{{product.name}}" width="100" height="100" onerror="this.style.display='none';" />
-            <img src="{{url_for('static',filename='images/'+ product.image_2)}}" alt="{{product.name}}" width="100" height="100" class="ml-5" onerror="this.style.display='none';" />
-            <img src="{{url_for('static',filename='images/'+ product.image_3)}}" alt="{{product.name}}" width="100" height="100" class="ml-5" onerror="this.style.display='none';" />
+            <img src="{{url_for('static',filename='images/'+ product.image_1)}}" alt="{{product.name}}" width="100" height="100" style="object-fit: contain;" onerror="this.style.display='none';" />
+            <img src="{{url_for('static',filename='images/'+ product.image_2)}}" alt="{{product.name}}" width="100" height="100" class="ml-5" style="object-fit: contain;" onerror="this.style.display='none';" />
+            <img src="{{url_for('static',filename='images/'+ product.image_3)}}" alt="{{product.name}}" width="100" height="100" class="ml-5" style="object-fit: contain;" onerror="this.style.display='none';" />
         </div>
     </div>
 </div>
@@ -38,7 +44,7 @@
     }
     function full_image() {
         var ImageSRC = this.getAttribute("src");
-        b_image.innerHTML = "<img src=" + ImageSRC + " width='400' height='400'>";
+        b_image.innerHTML = "<img src=" + ImageSRC + " width='400' height='400' style='object-fit: contain;'>";
     }
 </script>
 {% endblock content %}
