--- a/shop/templates/products/index.html
+++ b/shop/templates/products/index.html
@@ -10,13 +10,22 @@
                 <div class="col-md-3 mt-4">
                     <div class="card">
                         <img src="{{url_for('static', filename='images/' + p.image_1)}}" class="card-img-top"
-                             alt="{{p.name}}" height="200" width="200">
+                             alt="{{p.name}}" height="200" width="200" style="object-fit: contain;">
                         <div class="card-body">
                             {% if p.discount > 0 %}
                             <h5 style="text-shadow: 1px 2px 2px #000; color: #f00; transform: rotate(-15deg); position: absolute; top: 23%; left: 25%; font-weight: 600;"> Discount {{p.discount}}%</h5>
                             {% endif %}
                           <h5 class="text-center">{{p.name}}</h5>
                           <p class="text-center">Price ${{p.price}}</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="{{url_for('details_page', id=p.id)}}" class="float-left btn btn-sm btn-primary">
+                                Details</a>
+                            <form action="{{url_for('add_to_cart')}}" method="POST">
+                                <input type="hidden" name="product_id" value="{{p.id}}">
+                                <input type="hidden" name="quantity" value="1" min="1" max="20">
+                                <button type="submit" class="btn btn-sm btn-warning float-right">Add to Cart</button>
+                              </form>
                         </div>
                     </div>
                 </div>
@@ -27,13 +36,22 @@
                 <div class="col-md-3 mt-4">
                     <div class="card">
                         <img src="{{url_for('static', filename='images/' + p.image_1)}}" class="card-img-top"
-                             alt="{{p.name}}" height="200" width="200">
+                             alt="{{p.name}}" height="200" width="200" style="object-fit: contain;" >
                         <div class="card-body">
                             {% if p.discount > 0 %}
                             <h5 style="text-shadow: 1px 2px 2px #000; color: #f00; transform: rotate(-15deg); position: absolute; top: 23%; left: 25%; font-weight: 600;"> Discount {{p.discount}}%</h5>
                             {% endif %}
                           <h5 class="text-center">{{p.name}}</h5>
                           <p class="text-center">Price ${{p.price}}</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="{{url_for('details_page', id=p.id)}}" class="float-left btn btn-sm btn-primary">
+                                Details</a>
+                            <form action="{{url_for('add_to_cart')}}" method="POST">
+                                <input type="hidden" name="product_id" value="{{p.id}}">
+                                <input type="hidden" name="quantity" value="1" min="1" max="20">
+                                <button type="submit" class="btn btn-sm btn-warning float-right">Add to Cart</button>
+                              </form>
                         </div>
                     </div>
                 </div>
@@ -43,7 +61,8 @@
             {% for product in products %}
                 <div class="col-md-3 mt-4">
                     <div class="card">
-                        <img src="{{url_for('static', filename='images/' + product.image_1)}}" class="card-img-top" alt="{{product.name}}" height="200" width="200">
+                        <img src="{{url_for('static', filename='images/' + product.image_1)}}"
+                        class="card-img-top" alt="{{product.name}}" height="200" width="200" style="object-fit: contain;">
                         <div class="card-body">
                             {% if product.discount > 0 %}
                                 <h5 style="text-shadow: 1px 2px 2px #000; color: #f00; transform: rotate(-15deg); position: absolute; top: 23%; left: 25%; font-weight: 600;"> Discount {{product.discount}} %</h5>
@@ -54,7 +73,11 @@
                         <div class="card-footer">
                             <a href="{{url_for('details_page',id=product.id)}}" class="float-left btn btn-sm btn-primary">
                                 Details</a>
-                            <a href="#" class="float-right btn btn-sm btn-warning">Add to cart</a>
+                            <form action="{{url_for('add_to_cart')}}" method="POST">
+                                <input type="hidden" name="product_id" value="{{product.id}}">
+                                <input type="hidden" name="quantity" value="1" min="1" max="20">
+                                <button type="submit" class="btn btn-sm btn-warning float-right">Add to Cart</button>
+                          </form>
                         </div>
                     </div>
                 </div>
